[package]
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2018"
name = "smoqs"
version = "0.4.1"
license = "MIT"
description = "SmoQS is a mock for SNS/SQS providing a fast, in-memory queue"
homepage = "https://github.com/stevepryde/smoqs"
repository = "https://github.com/stevepryde/smoqs"
readme = "README.md"

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros", "sync", "time"]}
warp = "0.2"
log = "0.4.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7.1"
structopt = "0.3.14"
uuid = { version = "0.8.1", features = ["v4"] }
indexmap = "1.3.2"
thiserror = "1.0.16"
md-5 = "0.9"
